tests/Tree/negative/test005.jvt
-- no matching case branch

function main() : * {
  case[list](alloc[nil]()) {
    cons: 1
  }
}
